--- a/src/templates/form.hbs
+++ b/src/templates/form.hbs
@@ -1,3 +1,7 @@
-<form class="search-form" id="search-form">
-    <input type="text" name="query" autocomplete="off" placeholder="Search images..." />
-</form>
+<div class="form__container">
+    <form class="search-form" id="search-form">
+        <input type="text" name="query" id="search" autocomplete="off" placeholder="Search images..."
+            class="form__input" />
+        <button class="form__button" type="submit">Search</button>
+    </form>
+</div>
