--- a/src/templates/imgcard.hbs
+++ b/src/templates/imgcard.hbs
@@ -1,4 +1,4 @@
-<li class="gallery__item">
+<li class="gallery__item" id="{{id}}">
     <div class="photo-card">
         <div class="img-container">
             <img src="{{webformatURL}}" alt="{{tags}}" data-original="{{largeImageURL}}" class="photo-card__img" />
